--- a/NoProjects/style.css
+++ b/NoProjects/style.css
@@ -8,7 +8,7 @@ html {
   height: 100%;
 }
 
-.no-projects-container {
+.no-projects__container {
   flex-direction: column;
   min-height: 100%;
   gap: 10px;
