--- a/src/components/projectItem/style.scss
+++ b/src/components/projectItem/style.scss
@@ -1,11 +1,9 @@
-@import '../main.css';
-
 .project-item:hover .project-item__button {
   display: block;
 }
 
 @media screen and (min-width: 1024px) {
-  .body {
+  .wrapper {
     width: 100%;
   }
 }
