--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -3,4 +3,5 @@
 @import "@/components/emptyProjects/style.scss";
 @import "@/components/projectItem/style.scss";
 @import "@/components/taskItem/style.scss";
+@import "@/components/requestButtons/style.scss";
 
